<resources>
    <string name="app_name">MVPFrameWork</string>
    <string name="author_name">Rex Man</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_like">Like</string>
    <string name="action_collect">Collect</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="action_settings">Settings</string>
</resources>
